[gd_scene load_steps=8 format=3 uid="uid://wdnxqhctneyv"]

[ext_resource type="Script" uid="uid://bpq5fqrtu7f5o" path="res://core/avatar/avatar_ui.gd" id="1_igs02"]
[ext_resource type="Theme" uid="uid://hve1e7mnexbi" path="res://themes/theme.tres" id="1_ois6a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_entities_panel"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.12, 0.15, 0.2, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.28, 0.32, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_label_bg"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.2, 0.25, 0.35, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.35, 0.45, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_item_normal"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.12, 0.14, 0.17, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.22, 0.25, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_item_selected"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.15, 0.17, 0.2, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.32, 0.35, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_blue"]
bg_color = Color(0.2, 0.4, 0.8, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ois6a")
script = ExtResource("1_igs02")

[node name="EntityUserContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -380.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 16

[node name="UsersContainer" type="PanelContainer" parent="EntityUserContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_entities_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="EntityUserContainer/UsersContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ConnectedUsersLabel" type="Label" parent="EntityUserContainer/UsersContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_label_bg")
text = "Connected Users"
horizontal_alignment = 1

[node name="Users" type="ItemList" parent="EntityUserContainer/UsersContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_item_normal")
theme_override_styles/selected = SubResource("StyleBoxFlat_item_selected")
theme_override_styles/selected_focus = SubResource("StyleBoxFlat_item_selected")

[node name="EntitiesContainer" type="PanelContainer" parent="EntityUserContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_entities_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="EntityUserContainer/EntitiesContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CreateEntitiesLabel" type="Label" parent="EntityUserContainer/EntitiesContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_label_bg")
text = "Create Entities (Alt+#)"
horizontal_alignment = 1

[node name="Entities" type="ItemList" parent="EntityUserContainer/EntitiesContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_item_normal")
theme_override_styles/selected = SubResource("StyleBoxFlat_item_selected")
theme_override_styles/selected_focus = SubResource("StyleBoxFlat_item_selected")

[node name="LivesEntitiesContrainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
offset_right = -320.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_entities_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="LivesEntitiesContrainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TakeControlLabel" type="Label" parent="LivesEntitiesContrainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_label_bg")
text = "Take Control (1-8)"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="LivesEntitiesContrainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 0

[node name="LiveEntities" type="GridContainer" parent="LivesEntitiesContrainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 8

[node name="TargetUI" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0

[node name="WalletInfo" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="ConnectWallet" type="Button" parent="WalletInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_blue")
text = "Connect Wallet"

[node name="DisconnectWallet" type="Button" parent="WalletInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Disconnect Wallet"

[node name="WalletInfoLabel" type="Label" parent="WalletInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Not Connected"
text_overrun_behavior = 1

[node name="WalletInfoGrid" type="GridContainer" parent="WalletInfo"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="ProfileNFTLabel" type="LinkButton" parent="WalletInfo/WalletInfoGrid"]
layout_mode = 2
text = "Profile NFT:"
uri = "https://artizen.fund/index/p/lunco---space-is-a-right-not-a-privilege?season=4"

[node name="ProfileNFT" type="LinkButton" parent="WalletInfo/WalletInfoGrid"]
unique_name_in_owner = true
layout_mode = 2
underline = 2

[node name="GitcoinDonorLabel" type="LinkButton" parent="WalletInfo/WalletInfoGrid"]
layout_mode = 2
text = "Gitcoin Donor:"

[node name="GitcoinDonor" type="LinkButton" parent="WalletInfo/WalletInfoGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "TBD"

[node name="ArtizenBuyerLabel" type="LinkButton" parent="WalletInfo/WalletInfoGrid"]
layout_mode = 2
text = "Artizen Buyer:"
uri = "https://artizen.fund/index/p/lunco---space-is-a-right-not-a-privilege?season=4"

[node name="ArtizenBuyer" type="LinkButton" parent="WalletInfo/WalletInfoGrid"]
unique_name_in_owner = true
layout_mode = 2
underline = 2

[connection signal="item_selected" from="EntityUserContainer/UsersContainer/VBoxContainer/Users" to="." method="_on_users_item_selected"]
[connection signal="item_selected" from="EntityUserContainer/EntitiesContainer/VBoxContainer/Entities" to="." method="_on_entities_item_selected"]
[connection signal="pressed" from="WalletInfo/ConnectWallet" to="." method="_on_connect_wallet_pressed"]
[connection signal="pressed" from="WalletInfo/DisconnectWallet" to="." method="_on_disconnect_wallet_pressed"]
